--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "livewire/livewire": "^2.0"
+        "laravelcollective/html": "^6.2",
+        "livewire/livewire": "^2.0",
+        "ckeditor/ckeditor": "4.*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
